[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Steve Purcell <steve@sanityinc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.337"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app:main"
